# mcp

./: .gitignore  Q_RULE.md  Q_RULE_PROMPT_UPDATED.md  README.md
.github/scripts/: execute_code.py
.github/workflows/: execute-python-code.yml
awsQ/: code_review.md  complex_agent_requirements.md  configInit.bash  mcp-config.json  test_enhanced_strands_agent.py
awsQ/cli-agents/: mcpdev.json
awsQ/rules/: Q_RULE.md
crawling-data/guides/: README.md  crawling-sources-summary.md  strands-api-reference.md  strands-comprehensive-guide.md  strands-samples-collection.md
crawling-data/tests/: test_basic_agent.py  test_comprehensive.py  test_mcp.py  test_multi_agent.py  test_tools.py
dev/: s3.py
docs/: DEVELOPMENT.md
strands-agent-dev-mcp/: README.md  pyproject.toml
strands-agent-dev-mcp/src/strands_dev_mcp/: __init__.py  __main__.py  server.py
strands-agent-generator/: README.md  pyproject.toml  strands_agent_generator_mcp.py  test_strands_generator.py
strands-mcp/: main.py  pyproject.toml  server.py
