[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "strands-agent-dev-mcp-server"
version = "0.1.0"
description = "Strands Agents 개발 지원 MCP 서버 - AWS 서비스 기반 에이전트 구축을 위한 종합 솔루션"
authors = [
    {name = "Strands Dev Team", email = "dev@strands.com"}
]
dependencies = [
    "mcp>=1.11.0",
    "fastmcp>=0.1.0",
    "strands-agents>=1.7.0",
    "boto3>=1.40.0",
    "pydantic>=2.4.0",
    "typing-extensions>=4.13.0"
]
readme = "README.md"
license = {text = "Apache-2.0"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.urls]
Homepage = "https://github.com/strands-agents/dev-mcp-server"
Repository = "https://github.com/strands-agents/dev-mcp-server"
Documentation = "https://github.com/strands-agents/dev-mcp-server/blob/main/README.md"

[project.scripts]
strands-agent-dev-mcp-server = "strands_dev_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/strands_dev_mcp"]
